--- a/frontend/src/css/Products/EachProduct.module.css
+++ b/frontend/src/css/Products/EachProduct.module.css
@@ -1,9 +1,12 @@
+body{
+    font-family: Source Sans Pro,sans-serif
+}
 .container{
     width: 90%;
     margin: 5%;
     display: flex;
     flex-grow: 1;
-    background-color: rgb(143, 145, 145);
+    /* background-color: rgb(143, 145, 145); */
 }
 .containerImage{
     width: 70%;
@@ -13,6 +16,33 @@
     width: 90%;
     margin: auto;
     text-align: left;
+}
+.imgDisp{
+    display: flex;
+    gap: 1px;
+    width: 40%;
+    margin: auto;
+}
+.watchlist{
+    margin: 5% auto 5% auto;
+    display: flex;
+    gap: 3px;
+    font-size: 12px;
+    padding: 10px;
+    font-weight: 700;
+    color: rgb(133, 133, 133);
+    background-color: white;
+    border: 1px solid rgb(133, 133, 133);
+    border-radius: 5px;
+}
+.watchlistLogo{
+    font-size: 5px;
+    margin-top: -4%;
+    color: rgb(133, 133, 133);
+}
+.imgDisp>img{
+    height: 50px;
+    width: 50px;
 }
 h3,p,h5{
     margin: 2%;
@@ -27,8 +57,8 @@ h3,p,h5{
     font-size: 15px;
 }
 .star{
-    font-size: 20px;
-    color: yellow;
+    font-size: 18px;
+    color: rgb(196, 196, 96);
 }
 .offer{
     font-size: 12px;
@@ -37,17 +67,223 @@ h3,p,h5{
     color: white;
     border: 0;
     padding: 1%;
-    margin: 1%;
+    margin:0 0 0 2%;
     border-radius: 5px;
 }
 .price{
     display: flex;
+    margin:0 0 0 2%;
     gap: 2%;
 }
 .price>p:nth-child(2){
     text-decoration: line-through;
+    color: gray;
     margin-top: 4%;
 }
 .price>p:nth-child(3){
-    margin-top: 4%;
+    margin-top: -0.5%;
+    font-size: 10px;
+}
+.offers{
+    display: flex;
+    padding: 0;
+    margin-bottom: 0px;
+}
+
+.eme{
+    padding-top: 1.8%;
+}
+.buy{
+    margin:0 0 0 2%;
+    display: flex;
+    gap: 3%;
+}
+.counter{
+    display: flex;
+    border: 1px solid rgb(168, 168, 168);
+    border-radius:5px ;
+}
+.counter>p{
+    margin-top: 8%;
+    width: 10px;
+    font-size: 20px; 
+}
+.counter>button{
+    height: 35px;
+    width: 30px;
+    font-size: 20px;
+    border: 0;
+    border-radius: 5px;
+    background-color: white;
+}
+.cartAdd{
+    display: flex;
+    gap: 3px;
+    font-size: 12px;
+    padding-top: 10px;
+    font-weight: 700;
+    background-color: white;
+    border: 1px solid rgb(133, 133, 133);
+    border-radius: 5px;
+}
+.cont{
+    font-size: 20px;
+    margin-top: -4%;
+}
+.circle{
+    margin-top: 30px;
+    font-size: 10px;
+    color: rgb(155, 155, 0);
+}
+.directBuy{
+    display: flex;
+    gap: 3px;
+    font-size: 12px;
+    padding-top: 10px;
+    font-weight: 700;
+    background-color: #df4723;
+    border: 1px solid #df4723;
+    color: white;
+    border-radius: 5px;
+}
+.cont1{
+    font-size: 20px;
+    margin-top: -4%;
+    color: white;
+}
+.weight{
+    margin:0 0 0 2%;
+}
+.weight>p{
+   font-size: 10px; 
+}
+.weightButton{
+    height: 50px;
+    width: 100px;
+    margin: 1%;
+    background-color: white;
+    color: #028190;
+    border: 1px solid #028190;
+    border-radius: 5px;
+}
+.weightButton:hover{
+    color: rgb(2, 197, 197);
+    border: 1px solid rgb(2, 197, 197);
+}
+
+.delivery{
+    background-color: rgb(245, 245, 245);
+    margin-top: 5%;
+    margin-left: 3%;
+    width: 50%;
+    padding: 2%;
+    border-radius: 5%;
+}
+.delivery>p:nth-child(1){
+    color: rgb(5, 5, 5);
+    font-size: 13px;
+    font-weight: 600;
+}
+.delivery>p:nth-child(3){
+    color: #00b7ba;
+    font-size: 13px;
+}
+.delivery>p:nth-child(4),.delivery>p:nth-child(5),.delivery>p:nth-child(6){
+    font-size: 13px;
+}
+.input{
+    margin: 2%;
+    border: 1px solid grey;
+    width: 75%;
+    border-radius: 5px;
+}
+.input>input,.input>button{
+    border: 0;
+    background-color: transparent;
+    padding: 3%;
+}
+.input>button{
+    color: rgb(144, 226, 226);
+}
+.devIcon{
+    font-size: 13px;
+}
+.sponsor{
+    margin-top: 5%;
+    margin-left: 3%;
+    width: 50%;
+    padding: 2%;
+    border-radius: 5%;
+    border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    gap: 2%;
+}
+.sponsor>img{
+    width: 20%;
+}
+@media screen and (min-width: 420px) and (max-width:750px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width:420px) {
+    .containerImage{
+        width: 90%;
+        margin: 5%;
+    }
+    .imgDisp{
+        width: 70%;
+        margin: auto;
+    }
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+    .buy{
+        width: 95%;
+        padding: 5%;
+        margin-left: -12%;
+        position: fixed;
+        bottom: 0;
+        background-color: white;
+    }
+    .buy>button{
+        width: 100%;
+    }
+    .delivery{
+        width: 90%;
+    }
+    .input{
+        margin: 2%;
+        border: 1px solid grey;
+        width: 90%;
+        border-radius: 5px;
+    }
+    .input>input,.input>button{
+        border: 0;
+        background-color: transparent;
+        padding: 3%;
+    }
+    .input>button{
+        color: rgb(144, 226, 226);
+    }
+    .devIcon{
+        font-size: 13px;
+    }
+    .sponsor{
+        margin-top: 5%;
+        margin-left: 3%;
+        width: 90%;
+        padding: 2%;
+        border-radius: 5%;
+        border: 1px solid black;
+        border-radius: 5px;
+        display: flex;
+        gap: 2%;
+    }
+    .sponsor>img{
+        width: 20%;
+    }
 }
