--- a/frontend/src/components/LandingPage/LandingPage.module.css
+++ b/frontend/src/components/LandingPage/LandingPage.module.css
@@ -4,9 +4,9 @@
     max-width: 100%
 }
 
-.flashSalePage{
-    height: 473px;
-    max-width: 90%;
+.tagBox{
+    height: 450px;
+    max-width: 85%;
     margin: 50px auto;
     box-shadow: 0 2px 3px rgb(0 0 0 / 16%);
 }
@@ -14,12 +14,13 @@
     padding: 15px 40px;
     max-height: 60px;
     background: white;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
 }
 .tagName{
     display: flex;
-    width: 130px;
+    width: 330px;
 }
 .viewAllBtn{
     border: none;
@@ -30,4 +31,85 @@
 }
 .tagImg{
     margin-right: 10px;
+}
+
+.itemImage{
+    max-width: 160px;
+    max-height: 160px;
+}
+
+.carouselBox{
+    padding: 0px 5px;
+}
+.container{
+    border: 1px solid #e6e6e6;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    margin: 5px 5px 0px;
+    max-width: 100%;
+    height: 320px;
+    padding: 6px 15px 9px 15px;
+    background: #fff;
+}
+.discountBtn{
+    color: #df4723;
+    font-size: 10px;
+    display: flex;
+    background: #fff;
+    border: 1px solid #df4723;
+}
+.title{
+    font-size: 12px;
+    color: #25292b;
+    font-weight: 400;
+    text-align: left;
+    height: 48px;
+    margin: 20px 0px 5px;
+}
+.rating{
+    font-size: 8px;
+    color: #25292b;
+    margin: 0px;
+}
+.price{
+    display: flex;
+    gap: 11px;
+    margin-top: 20px;
+}
+.discountPrice{
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0px;
+}
+.originalPrice{
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0px;
+    color: #929495;
+    text-decoration: line-through;
+}
+.addBtn{
+    margin-top: 12px;
+    padding: 8px 6px;
+    background: #E1EDF4;
+    color: #004b5d;
+    font-size: 10px;
+    border: none;
+    width: 70px;
+    border-radius: 2px;
+}
+.priceAndAdd{
+    display: flex;
+    justify-content: space-between;
+}
+.premiumPriceBox{
+    padding: 9px 15px;
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
+    margin: 0px 5px;
+    max-width: 100%;
+    font-weight: 200;
+    background-color: #EAF8F8;
+    display: flex;
+    justify-content: space-between;
 }
