--- a/frontend/src/components/LandingPage/LandingPage.module.css
+++ b/frontend/src/components/LandingPage/LandingPage.module.css
@@ -4,6 +4,10 @@
     max-width: 100%
 }
 
+.wishlistIcon{
+    position: absolute;
+    right: 6%;
+}
 .tagBox{
     height: 450px;
     max-width: 85%;
@@ -41,6 +45,52 @@
 .carouselBox{
     padding: 0px 5px;
 }
+.benefitsWrapper{
+    min-height: 57.9%;
+    background-color: #aedfdf;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+}
+.benefitsWrapper > h5{
+    text-align: left;
+    margin: 0px;
+    padding: 6px 15px 9px 15px;
+    color: black;
+    opacity: 1;
+}
+.benefitsList{
+    font-size: 12px;
+    display: flex;
+    margin: 0px;
+}
+.benefitsList > p{
+    margin: 0px;
+}
+.ingredientsWrapper{
+    font-size: 11px;
+    color: #7A7A7B;
+}
+.ingredients{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 25%;
+    color: black;
+    gap: 0px;
+    padding: 0px;
+    margin: 0px;
+    text-align: left;
+    padding: 0px 5px;
+}
+.ingredients > h6{
+    font-size: 10px;
+    font-weight: 500;
+    margin: 0px;
+}
+.ingredients > h5{
+    font-size: 10px;
+    font-weight: 400;
+    color: #25292b;
+    margin: 0px;
+}
 .container{
     border: 1px solid #e6e6e6;
     border-top-left-radius: 9px;
@@ -48,8 +98,13 @@
     margin: 5px 5px 0px;
     max-width: 100%;
     height: 320px;
-    padding: 6px 15px 9px 15px;
     background: #fff;
+}
+.detailsWrapper{
+    padding: 0px 15px 9px 15px;
+}
+.imageWrapper{
+    padding: 6px 15px 0px 15px;
 }
 .discountBtn{
     color: #df4723;
@@ -112,4 +167,83 @@
     background-color: #EAF8F8;
     display: flex;
     justify-content: space-between;
+}
+
+.titleImagesBox{
+    display: grid;
+    grid-template-columns: repeat(4, 23%);
+    gap: 2.5%;
+    max-width: 85%;
+    margin: auto;
+}
+.titleImages{
+    max-width: 100%;
+    max-height: 100%;
+    cursor: pointer;
+}
+.tagBoxOfPopularItems{
+    height: 230px;
+    max-width: 85%;
+    margin: 50px auto;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 16%);
+}
+.imageBox{
+    display: flex;
+    flex-direction: column;
+}
+.carouselBoxOfPopularItems{
+    min-height: 110px;
+    margin: 15px 25px;
+    background: #fff;
+}
+/* .itemList{
+    max-width: 100%;
+    margin: auto;
+} */
+.imageSize{
+    display: block;
+    height: 80px;
+    max-width: 100%;
+    margin: auto;
+}
+.imageName{
+    font-size: 13px;
+    font-weight: 500;
+    margin-top: 10px;
+    padding: 0px 10px;
+    text-align: center;
+}
+.borderLine{
+    position: absolute;
+    border-left: 1px solid hsla(0,0%,43.9%,.2);
+    right: 0;
+    top: 25%;
+    width: 1px;
+    height: 50%;
+}
+.wrapperDiv{
+    display: flex;
+    background: #fff;
+    padding: 29px 0px;
+}
+.wrapper{
+    padding: 24px 16px;
+    border: 1px solid #E0E0E0;
+    border-left: none;
+    width: 25%;
+}
+.wrapperTitle{
+    font-size: 14px;
+    margin: 16px 0px 10px;
+    font-weight: 400;
+}
+.wrapperDetail{
+    color: #7A7A7B;
+    font-size: 12px;
+    margin: 10px 0px;
+}
+.getOnIcons{
+    gap: 10px;
+    display: flex;
+    flex-wrap: nowrap;
 }
