purchase process done

--- a/frontend/src/css/cartpage.module.css
+++ b/frontend/src/css/cartpage.module.css
@@ -20,6 +20,7 @@
 
 .navMain > img {
   margin-left: 35px;
+  cursor: pointer;
 }
 
 .process {
@@ -384,6 +385,129 @@
   display: none;
 }
 
+.disountpagedivsec{
+  display: none;
+}
+
+.backgroundBlu{
+  background-color: rgb(255, 255, 255);
+  filter: brightness(35%);
+}
+
+.discountpagediv{
+  z-index: 5;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  width: 35vw;
+  height: 100%;
+  background-color: white;
+  display: block;
+}
+
+.applycoupon {
+  position:relative;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 50px;
+  padding-bottom: 55px;
+  box-shadow: 2px 2px 2px 1px rgb(206, 205, 205);
+}
+
+.canceldiscount{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+}
+
+.applycoupon p {
+  padding-bottom: 15px;
+  font-size: 17px;
+  font-weight: 600;
+}
+
+
+.applycoupon > div {
+  display: flex;
+}
+
+.applycoupon > div input{
+  border: 1px solid rgb(16,132,126) ;
+  padding: 10px;
+  width: 260px;
+  border-radius: 5px 0px 0px 5px;
+  outline: none;
+}
+
+.applycoupon > div button{
+  border: none;
+  background-color: rgb(16,132,126);
+  color: white;
+  border-radius: 0px 5px 5px 0px;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px 35px 10px 35px;
+}
+
+.firstdicountpro{
+  display: flex;
+}
+
+.firstdicountpro img {
+  border: 1px solid rgb(214, 211, 211);
+  padding: 3px;
+  border-radius: 4px;
+}
+
+.specialdiscount{
+  font-weight: 500;
+  font-size: 15px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.detailsofproduct{
+margin-left: 10px;
+}
+
+.detailsofproduct :nth-child(1){
+  font-weight: 500;
+  font-size: 12.5px;
+}
+
+
+.detailsofproduct :nth-child(2){
+  font-size: 12.5px;
+  color: rgb(54, 54, 54);
+}
+
+.addcartbtndis{
+  margin-top: 15px;
+  border: 1px solid rgb(16,132,126);
+  border-radius: 3px;
+  background-color: transparent;
+  color: rgb(16,132,126);
+  font-weight: 500;
+  padding: 6px 12px 6px 12px;
+  cursor: pointer;
+}
+
+.mainmiddleoffers{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ gap: 14px;
+}
+
+.firstofferdis{
+  width: 85%;
+  border-radius: 5px;
+  box-shadow: 1.2px 1.2px 5px 1px rgb(224, 221, 221);
+  padding: 15px;
+}
+
 @media screen and (max-width: 750px) {
 
   .maxScreenNav{
@@ -641,6 +765,18 @@
 .discountarrowsmall {
   position: absolute;
   right: 18px;
+}
+
+
+.discountpagediv{
+  z-index: 5;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  width: 100vw;
+  height: 100%;
+  background-color: white;
+  display: block;
 }
 
 }
