--- a/frontend/src/css/productsPage/left.module.css
+++ b/frontend/src/css/productsPage/left.module.css
@@ -51,3 +51,19 @@
   line-height: 1.5;
   width:80%;
 }
+
+@media screen and (max-width:750px){
+  .leftwrapper{
+    display:none;
+  }
+  
+  .mainwrapper{
+    grid-template-columns: 100%;
+  }
+  
+}
+@media screen and (max-width:420px){
+   .mainwrapper{
+     grid-template-columns: 100%;
+   }
+}
