--- a/frontend/src/css/product.module.css
+++ b/frontend/src/css/product.module.css
@@ -15,6 +15,7 @@
   font-family: "Roboto", sans-serif;
   background-color: white;
   padding-bottom: 13px;
+  font-family: "Roboto", sans-serif;
 }
 
 .deliveryDate {
