--- a/frontend/src/css/Products/Reviews.module.css
+++ b/frontend/src/css/Products/Reviews.module.css
@@ -1,4 +1,4 @@
-p,li{
+/* p,li{
     font-size: 12px;
     text-align: left;
 }
@@ -6,7 +6,7 @@ h4,h6{
 text-align: left;
 margin: 0px;
 padding: 0px;
-}
+} */
 .container{
     width: 80%;
     margin: auto;
