--- a/frontend/src/css/nav.module.css
+++ b/frontend/src/css/nav.module.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
-
+/* 
 body{
     line-height: 1.5;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     color: #1a1a1a;
     
-}
+} */
 
 
 *{
@@ -254,9 +254,9 @@ position: relative;
 }
 
 /* banner */
-.bannerSection{
+/* .bannerSection{
     background-color: red;
     height:700px;
     width:100%;
     display:block;
-}
+} */
