--- a/frontend/src/css/topnav.module.css
+++ b/frontend/src/css/topnav.module.css
@@ -43,11 +43,11 @@ li{
     margin-left:-5%;
 } */
 
-input[type="text"] {
+/* input[type="text"] {
     height: 100%;
     width:100%;
     
-}
+} */
 
 /*-----------------------------------------------------*/
 
