--- a/frontend/src/components/LandingPage/LandingPage.module.css
+++ b/frontend/src/components/LandingPage/LandingPage.module.css
@@ -1,6 +1,6 @@
 
 .swiperImg{
-    height: 306px;
+    height: 100%;
     max-width: 100%
 }
 
@@ -53,7 +53,8 @@
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     padding: 6px 15px 9px 15px;
-    min-width: 84%;
+    min-width: 95%;
+    max-width: 95%;
 }
 .benefitsWrapper > h5{
     text-align: left;
@@ -101,8 +102,9 @@
     border-top-right-radius: 9px;
     margin: 5px 5px 0px;
     max-width: 100%;
-    height: 320px;
+    height: 330px;
     background: #fff;
+    cursor: pointer;
 }
 .detailsWrapper{
     padding: 0px 15px 9px 15px;
@@ -127,6 +129,7 @@
 }
 .ratingWrapper{
     display: flex;
+    min-height: 18px;   
 }
 .rating{
     font-size: 8px;
@@ -142,6 +145,7 @@
     font-size: 14px;
     font-weight: 600;
     margin: 0px;
+
 }
 .originalPrice{
     font-size: 12px;
@@ -163,6 +167,7 @@
 .priceAndAdd{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 .premiumPriceBox{
     padding: 9px 15px;
@@ -176,6 +181,12 @@
     justify-content: space-between;
 }
 
+.tagWrapper{
+    text-align: left;
+    font-size: 24px;
+    max-width: 85%;
+    margin: 0px auto 20px;
+}
 .titleImagesBox{
     display: grid;
     grid-template-columns: repeat(4, 23%);
@@ -197,6 +208,7 @@
 .imageBox{
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 }
 .carouselBoxOfPopularItems{
     min-height: 110px;
@@ -253,4 +265,7 @@
     gap: 10px;
     display: flex;
     flex-wrap: nowrap;
+}
+
+@media screen and (max-width: 750px){
 }
