--- a/frontend/src/css/Products/EachProduct.module.css
+++ b/frontend/src/css/Products/EachProduct.module.css
@@ -2,26 +2,24 @@
     font-family: Source Sans Pro,sans-serif
 } */
 .container{
-    width: 90%;
-    margin: 5%;
+    width: 65%;
+    margin: auto;
     display: flex;
-    flex-grow: 1;
+    gap: 5%;
+    
     /* background-color: rgb(143, 145, 145); */
 }
-.containerImage{
-    width: 70%;
+.containerImage>img{
+    height: 300px;
     margin: auto;
 }
 .containerData{
-    width: 90%;
-    margin: auto;
-    text-align: left;
+    
 }
 .imgDisp{
     display: flex;
     gap: 1px;
-    width: 40%;
-    margin: auto;
+    
 }
 .watchlist{
     margin: 5% auto 5% auto;
@@ -41,20 +39,34 @@
     color: rgb(133, 133, 133);
 }
 .imgDisp>img{
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
 }
 /* h3,p,h5{
     margin: 2%;
 } */
+.byProduct1{
+    font-weight: 700;
+    font-size: 15px;
+    margin: 5px;
+}
+.byProduct{
+    margin: 5px;
+}
 .byProduct>span{
     color: rgb(2, 208, 245);
     font-weight: 700;
+    
 }
 .rate{
     display: flex;
     gap: 5px;
     font-size: 15px;
+    margin: 5px;
+}
+.rate>img{
+    margin: 1px;
+    height: 15px;
 }
 .star{
     font-size: 18px;
@@ -67,34 +79,58 @@
     color: white;
     border: 0;
     padding: 1%;
-    margin:0 0 0 2%;
+    margin:0 0 0 1%;
     border-radius: 5px;
 }
 .price{
     display: flex;
-    margin:0 0 0 2%;
+    margin:1% 0 0 1%;
     gap: 2%;
 }
-.price>p:nth-child(2){
+.price>h2:nth-child(2){
     text-decoration: line-through;
+    font-size: 12px;
     color: gray;
-    margin-top: 4%;
+    margin-top: 3%;
 }
 .price>p:nth-child(3){
-    margin-top: 2%;
+    margin-top: 3%;
     font-size: 10px;
+}
+.price>p:nth-child(3)>img{
+    height: 10px;
+}
+.premium{
+    margin: 2% 1%;
+    display: flex;
+    padding: 2%;
+    gap: 5px;
+    width: 270px;
+    border-radius: 10px;
+    border: 1px solid #198b86;
+}
+.premium>img{
+    padding-top: 4px;
+    height: 20px;
+}
+.premium>p{
+    color:#198b86 ;
+}
+.premium:hover{
+    box-shadow: 2px 2px #c0f7f4;
 }
 .offers{
     display: flex;
-    padding: 0;
-    margin-bottom: 0px;
 }
-
+.offers>p{
+    padding: 1% 3% 1% 1%;
+}
 .eme{
-    padding-top: 1.8%;
+    height: 15px;
+    margin-top: 9px;
 }
 .buy{
-    margin:0 0 0 2%;
+    margin:3% 0 0 1%;
     display: flex;
     gap: 3%;
 }
@@ -120,7 +156,7 @@
     display: flex;
     gap: 3px;
     font-size: 12px;
-    padding-top: 10px;
+    padding: 10px;
     font-weight: 700;
     background-color: white;
     border: 1px solid rgb(133, 133, 133);
@@ -139,12 +175,15 @@
     display: flex;
     gap: 3px;
     font-size: 12px;
-    padding-top: 10px;
+    padding: 10px;
     font-weight: 700;
     background-color: #df4723;
     border: 1px solid #df4723;
     color: white;
     border-radius: 5px;
+}
+.directBuy>img,.cartAdd>img{
+    height: 15px;
 }
 .cont1{
     font-size: 20px;
@@ -152,15 +191,17 @@
     color: white;
 }
 .weight{
-    margin:0 0 0 2%;
+    margin:2% 0 0 1%;
 }
 .weight>p{
-   font-size: 10px; 
+   font-size: 12px; 
+   font-weight: 700;
+   color: gray;
 }
 .weightButton{
     height: 50px;
     width: 100px;
-    margin: 1%;
+    margin: 1% 0% 0% 1%;
     background-color: white;
     color: #028190;
     border: 1px solid #028190;
