--- a/frontend/src/css/nav.module.css
+++ b/frontend/src/css/nav.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 /* 
 body{
     line-height: 1.5;
@@ -9,10 +9,10 @@ body{
 } */
 
 
-*{
+/* *{
     margin:0;
     box-sizing: border-box;
-}
+} */
 /* :before,:after{
     box-sizing: border-box;
 } */
@@ -71,7 +71,9 @@ a{
   margin-left: 10px;
   transition: color 0.3s ease;
 }
-.header .itemRight a:hover,
+.header .itemRight a:hover{
+    border-radius: 5px;
+}
 
 
 .header .menu > ul > li{
@@ -121,7 +123,9 @@ a{
     transition: color 0.3s ease;
     text-decoration: none;
 }
-.header .menu > ul > li .subMenu > ul > li > a:hover,
+.header .menu > ul > li .subMenu > ul > li > a:hover{
+    font-weight: 400;
+}
 .header .menu > ul > li .singleColumnMenu{
     min-width:280px;
     max-width:350px;
@@ -142,7 +146,9 @@ a{
     color:#555555;
     transition: color 0.3s ease;
 }
-.header .menu > ul > li .subMenu.megaMenu > .listItem >ul > li > a:hover,
+.header .menu > ul > li .subMenu.megaMenu > .listItem >ul > li > a:hover{
+    font-weight: 400;
+}
 .header .menu > ul > li .subMenu.megaMenu{
     left:50%;
     transform: translateX(-50%)
