--- a/frontend/src/css/nav.module.css
+++ b/frontend/src/css/nav.module.css
@@ -18,7 +18,9 @@ body{
 } */
 .container{
     max-width:1200px;
-   
+    position: sticky;
+    top: 0;
+    z-index: 100;
     margin:auto;
 }
 .row{
@@ -45,7 +47,7 @@ a{
     width:100%;
     position: relative;
     z-index: 99;
-    /* padding:15px */
+    padding:15px
 }
 
 .header .itemLeft{
@@ -84,7 +86,7 @@ a{
 }
 .header .menu > ul > li > a{
     font-size:15px;
-    font-weight: 500;
+    font-weight: 400;
     color:#000000;
     position: relative;
     transition:color 0.3s ease;
@@ -106,9 +108,10 @@ a{
 }
 
 .header .menu > ul > li.menuItemHasChildren:hover .subMenu{
-    margin-top: 15px;
+    margin-top: 10px;
     visibility: visible;
     opacity:1;
+
 }
 
 .header .menu > ul > li .subMenu > ul > li{
