--- a/frontend/src/css/productsPage/right.module.css
+++ b/frontend/src/css/productsPage/right.module.css
@@ -1,7 +1,8 @@
 .card{
     /* border:1px solid black; */
     background-color: white;
-    height:420px;
+    /* height:420px; */
+    /* height:40%; */
     text-align: left;
     font-family:Roboto,sans-serif;
     
@@ -10,7 +11,7 @@
     box-shadow: -2px 2px 70px -27px rgba(0,0,0,0.3);
 }
 .proteinimg{
-    width:80%;
+    width:60%;
     margin-right:10%
 }
 
