--- a/frontend/src/components/LandingPage/LandingPage.module.css
+++ b/frontend/src/components/LandingPage/LandingPage.module.css
@@ -265,8 +265,38 @@
 .getOnIcons{
     gap: 10px;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 750px){
+    .getOnIcons > img{
+        max-width: 100%;
+    }
+    .titleImagesBox{
+        display: grid;
+        grid-template-columns: repeat(3, 30%);
+        gap: 2.5%;
+        max-width: 85%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .swiperImg{
+        display: none;
+    }
+    .itemImage{
+        max-width: 80%;
+        margin: 0px 24%;
+    }
+    .getOnIcons > img{
+        max-width: 100%;
+    }
+    .titleImagesBox{
+        display: grid;
+        grid-template-columns: repeat(2, 48%);
+        gap: 2.5%;
+        max-width: 85%;
+        margin: auto;
+    }
 }
