wishlist done with integrated everywhere

--- a/frontend/src/css/nav.module.css
+++ b/frontend/src/css/nav.module.css
@@ -47,7 +47,8 @@ a{
     width:100%;
     position: relative;
     z-index: 99;
-    padding:15px
+    padding: 3px;
+    box-shadow: 1px 2px 1.5px 1px rgb(223, 223, 223);
 }
 
 .header .itemLeft{
