--- a/frontend/src/css/nav.module.css
+++ b/frontend/src/css/nav.module.css
@@ -269,3 +269,9 @@ position: relative;
     width:100%;
     display:block;
 } */
+
+@media screen and (max-width: 1000px){
+    .header{
+        display: none;
+    }
+  }
