added cart link for mobile view

--- a/frontend/src/css/navbartopsec.module.css
+++ b/frontend/src/css/navbartopsec.module.css
@@ -8,6 +8,11 @@
 .mobileView{
   display: none;
 }
+
+.navContainer{
+  background-color: white;
+}
+
 .navtopsection{
   font-family: "Roboto", sans-serif;
   display: flex;
